Organize the buttons and links page layout

--- a/links-buttons.html
+++ b/links-buttons.html
@@ -32,56 +32,121 @@
         <div class="content__row">
             
             <div class="grid grid-cols">
-                <div class="col col-span-12">
-
+                <div class="col col-3-span-8">
                     <h1>Links &amp; Buttons</h1>
-
-                    <p>Work in progress...</p>
-
-                </div>
-            </div>
-
-            <div class="grid grid-cols-3">
-                <div class="col">
-                    <ul class="list-style-none">
-                        <li><a href="https://github.com/guidoslotboom2">Link</a> lorem ipsum dolor</li>
-                        <li><a class="link-primary" href="https://github.com/guidoslotboom2">Primary link</a> lorem ipsum dolor</li>
-                        <li><a class="link-accent" href="https://github.com/guidoslotboom2">Accent link</a> lorem ipsum dolor</li>
-                        <li><a class="link-neutral" href="https://github.com/guidoslotboom2">Neutral link</a> lorem ipsum dolor</li>
-                        <li><a class="link-contrast" href="https://github.com/guidoslotboom2">Contrast link</a> lorem ipsum dolor</li>
-                    </ul>
-                    <p>Lorem ipsum dolor sit amet <a href="https://github.com/guidoslotboom2">link</a>, consectetur adipiscing elit <a class="text-primary" href="https://github.com/guidoslotboom2">primary link</a>.</p>
-                    <p><a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button text</a> <a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button text</a></p>
-                    <p><a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button text</a></p>
-                </div>
-                <div class="col">
-                    <ul class="list-style-none">
-                        <li><a class="button" href="https://github.com/guidoslotboom2">Button</a></li>
-                        <li><a class="button button-filled" href="https://github.com/guidoslotboom2">Button filled</a></li>
-                        <li><a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button filled neutral</a></li>
-                        <li><a class="button button-filled-primary" href="https://github.com/guidoslotboom2">Button filled primary</a></li>
-                        <li><a class="button button-filled-accent" href="https://github.com/guidoslotboom2">Button filled accent</a></li>
-                        <li><a class="button button-filled-contrast" href="https://github.com/guidoslotboom2">Button filled contrast</a></li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <ul class="list-style-none">
-                        <li><a class="button" href="https://github.com/guidoslotboom2">Button</a></li>
-                        <li><a class="button button-outline" href="https://github.com/guidoslotboom2">Button outline</a></li>
-                        <li><a class="button button-outline-neutral" href="https://github.com/guidoslotboom2">Button outline neutral</a></li>
-                        <li><a class="button button-outline-primary" href="https://github.com/guidoslotboom2">Button outline primary</a></li>
-                        <li><a class="button button-outline-accent" href="https://github.com/guidoslotboom2">Button outline accent</a></li>
-                        <li><a class="button button-outline-contrast" href="https://github.com/guidoslotboom2">Button outline contrast</a></li>
+                    
+                    <ul>
+                        <li><a href="#text-link">Text link</a></li>
+                        <li><a href="#text-button">Text button</a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="grid grid-cols">
-                <div class="col col-span-12">
-                    <p><a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button text</a> <a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button text</a></p>
+                <div class="col col-3-span-8">
+                    <h2 id="text-link">Text link</h2>
+
+                    <p>Here will be an introductory text.</p>
+
+                    <ul class="list-style-none theme-example-list">
+                        <li><strong>Class</strong></li>
+                        <li>
+                            <span class="theme-example-class">-</span>
+                            <a class="link" href="https://github.com/guidoslotboom2">Text link</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>link</code></span>
+                            <a class="link" href="https://github.com/guidoslotboom2">Text link</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>link-primary</code></span>
+                            <a class="link-primary" href="https://github.com/guidoslotboom2">Text link</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>link-accent</code></span>
+                            <a class="link-accent" href="https://github.com/guidoslotboom2">Text link</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>link-neutral</code></span>
+                            <a class="link-neutral" href="https://github.com/guidoslotboom2">Text link</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>link-contrast</code></span>
+                            <a class="link-contrast" href="https://github.com/guidoslotboom2">Text link</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
+            <div class="grid grid-cols">
+                <div class="col col-3-span-8">
+                    <h2 id="text-button">Text Button</h2>
+
+                    <p>Here will be an introductory text.</p>
+
+                    <h3>Text Button - Base Style</h3>
+
+                    <ul class="list-style-none theme-example-list">
+                        <li><strong>Class</strong></li>
+                        <li>
+                            <span class="theme-example-class"><code>button</code></span>
+                            <a class="button" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                    </ul>
+
+                    <h3>Text Button - Outline Style</h3>
+
+                    <ul class="list-style-none theme-example-list">
+                        <li><strong>Class</strong></li>
+                        <li>
+                            <span class="theme-example-class"><code>button-filled</code></span>
+                            <a class="button-filled" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>button-filled-neutral</code></span>
+                            <a class="button-filled-neutral" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>button-filled-primary</code></span>
+                            <a class="button-filled-primary" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>button-filled-accent</code></span>
+                            <a class="button-filled-accent" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>button-filled-contrast</code></span>
+                            <a class="button-filled-contrast" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                    </ul>
+
+                    <h3>Text Button - Outline Style</h3>
+
+                    <ul class="list-style-none theme-example-list">
+                        <li><strong>Class</strong></li>
+                        <li>
+                            <span class="theme-example-class"><code>button-outline</code></span>
+                            <a class="button button-outline" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>button-outline-neutral</code></span>
+                            <a class="button button-outline-neutral" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>button-outline-primary</code></span>
+                            <a class="button button-outline-primary" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>button-outline-accent</code></span>
+                            <a class="button button-outline-accent" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                        <li>
+                            <span class="theme-example-class"><code>button-outline-contrast</code></span>
+                            <a class="button button-outline-contrast" href="https://github.com/guidoslotboom2">Text button</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
     </div>
