--- a/columns-fixed.html
+++ b/columns-fixed.html
@@ -90,6 +90,7 @@
                     <h4>Style</h4>
                     <ul>
                         <li><a href="colors.html">Colors</a></li>
+                        <li><a href="form-fields.html">Form Fields</a></li>
                         <li><a href="links-buttons.html">Links &amp; Buttons</a></li>
                         <li><a href="typography.html">Typography</a></li>
                     </ul>
