Edited index and read me text

--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
         <div class="content__row">
 
             <div class="grid grid-cols">
-                <div class="col-span-12">
-                    <h1>Fluid basic layout</h1>
-                    <p>A side project</p>
+                <div class="col col-span-12">
+                    <h1>Fluid Basic Layout</h1>
+
+                    <h2>A side project</h2>
+                    <p>The Fluid Basic Layout is a side project of Guido Slotboom to keep up with the front-end's skills and to use it as a starting point for future side projects.</p>
+                    <p>Feel free to use the Fluid Basic Layout styling or parts of it. A mention on your project or social profile will be much appreciated.</p>
                 </div>
             </div>
 
