Started with the form fields styling

--- a/form-fields.html
+++ b/form-fields.html
@@ -35,7 +35,60 @@
 
                     <h1>Form Fields</h1>
 
-                    <p>Coming soon</p>
+                    <p>Work in progress..</p>
+
+                    <form>
+                        <fieldset class="form-fields">
+                            <div class="form-field">
+                                <label for="example-text-field">Label</label>
+                                <input type="text" id="example-text-field" placeholder="This is a text field">
+                            </div>
+                            <div class="form-field">
+                                <label for="example-text-field">Label</label>
+                                <input type="text" id="example-text-field" placeholder="This is a text field">
+                            </div>
+                            <div class="form-field">
+                                <label for="example-text-field">Label</label>
+                                <input type="text" id="example-text-field" placeholder="This is a text field">
+                            </div>
+                        </fieldset>
+
+                        <fieldset class="form-fields">
+                            <div class="form-field">
+                                <label for="example-select-field">Select an option:</label>
+                                <select name="options" id="example-select-field">
+                                    <option value="option one">Option one</option>
+                                    <option value="option two">Option two</option>
+                                    <option value="option three">Option three</option>
+                                    <option value="option four">Option four</option>
+                                </select>
+                            </div>
+                        </fieldset>
+
+                        <fieldset class="form-fields">
+                            <legend>Choose an option</legend>
+                            <div class="form-field">
+                                <input type="checkbox" id="option-one" name="option-one" value="Option one">
+                                <label for="option-one">Option one</label>
+                            </div>
+                            <div class="form-field">
+                                <input type="checkbox" id="option-two" name="option-two" value="Option two">
+                                <label for="option-two">Option two</label>
+                            </div>
+                            <div class="form-field">
+                                <input type="checkbox" id="option-three" name="option-three" value="Option three">
+                                <label for="option-three">Option three</label>
+                            </div>
+                        </fieldset>
+
+                        <div class="form-fields">
+                            <legend>Do you agree?</legend>
+                            <div class="form-field">
+                                <input type="radio" id="option-one" name="option-one" value="Option one">
+                                <label for="option-one">I agree with the lorem ipsum dolor sit amet, consectetur adipiscing elit.</label>
+                            </div>
+                        </div>
+                    </form>
 
                 </div>
             </div>
