Editing form fields styling

--- a/form-fields.html
+++ b/form-fields.html
@@ -168,13 +168,15 @@
                         <li><strong>Type</strong></li>
                         <li>
                             <span class="theme-example-class">select</span>
-                            <select name="options">
-                                <option value="">Choose an option</option>
-                                <option value="option one">Option one</option>
-                                <option value="option two">Option two</option>
-                                <option value="option three">Option three</option>
-                                <option value="option four">Option four</option>
-                            </select>
+                            <div class="field-select">
+                                <select name="options">
+                                    <option value="">Choose an option</option>
+                                    <option value="option one">Option one</option>
+                                    <option value="option two">Option two</option>
+                                    <option value="option three">Option three</option>
+                                    <option value="option four">Option four</option>
+                                </select>
+                            </div>
                         </li>
                         <li>
                             <span class="theme-example-class">select disabled</span>
